--- a/themes/hermit/assets/scss/style.scss
+++ b/themes/hermit/assets/scss/style.scss
@@ -194,7 +194,7 @@ table {
 #site-header {
   position: fixed;
   z-index: 1;
-  bottom: 0;
+  top: 0;
   width: 100%;
   box-sizing: border-box;
   box-shadow: -1px -2px 3px rgba(0, 0, 0, 0.45);
