--- a/themes/hermit/layouts/partials/header.html
+++ b/themes/hermit/layouts/partials/header.html
@@ -1,4 +1,4 @@
-	<header id="site-header" class="animated slideInUp faster">
+	<header id="site-header" class="animated faster">
 		<div class="hdr-wrapper section-inner">
 			<div class="hdr-left">
 				<div class="site-branding">
