--- a/themes/hermit/layouts/index.html
+++ b/themes/hermit/layouts/index.html
@@ -29,7 +29,13 @@
 			</div>
 			{{- end }}
 			<nav id="home-nav" class="site-nav">
-				{{ partialCached "menu.html" . }}
+				{{- range .Site.Menus.main }}
+					{{- if .HasChildren }}
+						<a href="{{ .URL | absLangURL }}" class="has-children">{{ .Name }}</a>
+					{{- else }}
+						<a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+					{{- end }}
+				{{- end }}
 			</nav>
 		</div>
 		<div id="home-footer">
