--- a/themes/hermit/assets/scss/style.scss
+++ b/themes/hermit/assets/scss/style.scss
@@ -153,6 +153,37 @@ table {
   display: none;
 }
 
+// Code copy buttons
+//
+
+.highlight {
+    position: relative;
+}
+
+.highlight pre {
+    padding-right: 75px;
+}
+
+.highlight-copy-btn {
+    position: absolute;
+    bottom: 7px;
+    right: 7px;
+    border: 0;
+    border-radius: 4px;
+    padding: 1px;
+    font-size: 0.7em;
+    line-height: 1.8;
+    color: #fff;
+    background-color: #777;
+    opacity: 0.6;
+    min-width: 55px;
+    text-align: center;
+}
+
+.highlight-copy-btn:hover {
+    background-color: #666;
+}
+
 // Accessibility
 //
 .screen-reader-text {
@@ -295,7 +326,7 @@ table {
 //
 #spotlight {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -605,7 +636,7 @@ hr.post-end {
       background: transparent;
     }
 
-    &.footnote-return {
+    &.footnote-backref {
       text-decoration: none;
     }
   }
@@ -615,12 +646,18 @@ hr.post-end {
   }
 }
 
-.footnote-ref a {
+a.footnote-ref {
   box-shadow: none;
   text-decoration: none;
   padding: 2px;
   border-radius: 2px;
   background-color: $midnightblue;
+
+  &:hover{
+    box-shadow: none;
+    background-color: $theme;
+    transition-property: background-color;
+  }
 }
 
 .post-info {
