--- a/themes/hermit/assets/scss/style.scss
+++ b/themes/hermit/assets/scss/style.scss
@@ -268,7 +268,7 @@ table {
   font-size: 1.2em;
 }
 
-.hdr-social {
+.hdr-network {
   display: inline-block;
   margin-left: .6em;
 
@@ -392,7 +392,7 @@ p.img-404 {
   opacity: .9;
 }
 
-#home-social {
+#home-network {
   font-size: 1.4em;
   text-align: center;
   opacity: .8;
